tests/ui/tests/lowering/module-headers-unsupported.stderr
error: module headers not supported yet
 --> ${DIRECTORY}/lowering/module-headers-unsupported.lushui:6:1
  |
6 | module
  | ^^^^^^ 
  |

error[E013]: attribute `intrinsic` is ascribed to a module header declaration
 --> ${DIRECTORY}/lowering/module-headers-unsupported.lushui:8:1
  |
8 | @intrinsic
  | ^^^^^^^^^^ misplaced attribute
  |
 --> ${DIRECTORY}/lowering/module-headers-unsupported.lushui:9:1
  |
9 | module
  | ------ incompatible item
  |
 note: attribute `intrinsic` can only be ascribed to value or data declarations

error: module headers not supported yet
 --> ${DIRECTORY}/lowering/module-headers-unsupported.lushui:9:1
  |
9 | module
  | ^^^^^^ 
  |

error: aborting due to 3 previous errors
 note: the error E013 has a detailed explanation
 help: run `lushui explain E013` to view it

